--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ exercises/exercise06/UserSettings
 exercises/exercise06/Temp
 exercises/exercise06/exercise06.sln
 exercises/exercise06/.vsconfig
+.cache
+.idea
